--- a/image1.html
+++ b/image1.html
@@ -196,7 +196,12 @@
                 opacity: 1;
             }
         }
-
+        .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
         /* Apply different animation delays to each button */
         .button:nth-child(1) {
             animation-delay: 0.2s;
