--- a/image26.html
+++ b/image26.html
@@ -140,7 +140,12 @@
             left: -73.6%;
             bottom: -5%;
         }
-
+        .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
         #headin {
             height: 7%;
             width: 67%;
