--- a/image30.html
+++ b/image30.html
@@ -90,7 +90,12 @@
     /* transform: translateX(-50%); */
     position: relative;
     }
-
+    .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
     .image1 {
         height: 83%;
     top: 21%;
