--- a/page1.html
+++ b/page1.html
@@ -109,6 +109,12 @@
             height: auto;
             cursor: pointer;
         }
+        .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
         .backButton01 {
             width: 2.8%;
             position: fixed;
