--- a/menu7.html
+++ b/menu7.html
@@ -34,6 +34,12 @@
             height: 100%;
             object-fit: cover;
         }
+        .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
         .image, .image1, .backButton, .backButton01,#logoTop {
             overflow: hidden;
             cursor: pointer;
