--- a/page2.html
+++ b/page2.html
@@ -46,6 +46,12 @@
             height: auto;
             cursor: pointer;
         }
+        .backButton01:hover {
+          content: url(./newimage/backhov.png);
+        }
+        .backButton:hover {
+          content: url(./newimage/Homehov.png);
+        }
         #container {
             display: grid;
             grid-template-areas:
